# PharmaDDI-RL-Env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_state.py  vall.py
server/: PharmaDDIEnv_environment.py  __init__.py  app.py  curriculum.py  drug_data.py  requirements.txt
